<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/AppBarName"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/filmes_application"
            app:titleTextColor="@color/color_boulder" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.43" />

            <View
                android:id="@+id/viewGradientTop"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:background="@drawable/background_gradient_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textTitleDiscovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="16dp"
                android:text="@string/descubra_titulo_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewGradientTop" />

            <ImageView
                android:id="@+id/imageDiscoveryAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleDiscovery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleDiscovery" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDiscovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleDiscovery"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/textTitleTrending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/titulo_tendencias_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerDiscovery" />

            <ImageView
                android:id="@+id/imageTrendingAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleTrending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleTrending" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTrending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleTrending"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/textTitleTopRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/titulo_topRated_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerTrending" />

            <ImageView
                android:id="@+id/imageTopRateAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleTopRate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleTopRate" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTopRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleTopRate"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/textTitlePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/titulo_pupolares_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerTopRate" />

            <ImageView
                android:id="@+id/imagePopularAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textTitlePopular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitlePopular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPopular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitlePopular"
                tools:listitem="@layout/item_movie" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.CircularRevealFrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>